# old-wakscord-node

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.example.yml  errors.py  log_handler.py  main.py  pylintrc  pyproject.toml  requester.py  requirements.txt  task_queue.py  utils.py
.config/: .env.example  metadata.example.json
.github/workflows/: docker.yml
logs/: readme.txt
node/: __main__.py  app.py  requirements.txt
node/modules/: env.py  message.py  requester.py  task_manager.py  utils.py
test/: chat.py
